--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin recipes</h1>
-    <a href="recipes/lasagna.html">Lasagne</a>
+    <h1>Lasagne</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5787099.jpg&w=595&h=595&c=sc&poi=face&q=60"
+<p>This is the recipe for a lasagne</p>
+<li>sugar</li>
+<li>pasta</li>
 </body>
 </html>
